@@ -1,0 +1,9 @@
+Feature: x
+
+  Scenario Outline: x
+    Then x is <state>
+
+    Examples:
+      | state |
+      # comment
+      | 1     |
